--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -49,12 +49,28 @@ android {
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
+    // signingConfigs {
+    //     release {
+    //         keyAlias keystoreProperties['keyAlias']
+    //         keyPassword keystoreProperties['keyPassword']
+    //         storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+    //         storePassword keystoreProperties['storePassword']
+    //     }
+    // }
 
     buildTypes {
-        release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
+        // release {
+        //     signingConfig signingConfigs.release
+        //     useProguard true
+        //     proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        //     ndk {
+        //         abiFilters 'armeabi-v7a'
+        //     }
+        // }
+
+        debug {
+            minifyEnabled false
+            useProguard false
         }
     }
 }
