--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,9 @@ dev_dependencies:
   flutter_lints: ^1.0.0
   percent_indicator: ^3.4.0
   pdf: ^3.7.4
+  pdf_viewer_flutter: ^1.0.2
+  path_provider: ^2.0.9
+  permission_handler: ^9.2.0
 
 
 
