--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dev_dependencies:
   printing: ^5.8.0
   path_provider: ^2.0.9
   permission_handler: ^9.2.0
+  flutter_native_splash: ^2.1.6
+  package_info_plus: ^1.4.2
 
 
 
