--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,11 +18,6 @@ dependencies:
   intl: ^0.17.0
   flutter_local_notifications: ^9.4.1
   flutter_email_sender: ^5.1.0
-
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
-
   flutter_lints: ^1.0.0
   percent_indicator: ^3.4.0
   pdf: ^3.7.4
@@ -37,6 +32,14 @@ dev_dependencies:
   url_launcher: ^6.1.0
   carousel_slider: ^4.1.1
   shared_preferences: ^2.0.13
+  rxdart: ^0.27.3
+  flutter_native_timezone: ^2.0.0
+
+dev_dependencies:
+  flutter_test:
+    sdk: flutter
+
+
 
 
 
