--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.0+1
+version: 1.0.2+2
 
 environment:
   sdk: ">=2.16.1 <3.0.0"
@@ -12,7 +12,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
 
   cupertino_icons: ^1.0.2
   intl: ^0.17.0
@@ -34,6 +33,7 @@ dependencies:
   rxdart: ^0.27.3
   flutter_native_timezone: ^2.0.0
   overlay_support: ^1.2.1
+  provider: ^6.0.2
 
 dev_dependencies:
   flutter_test:
@@ -50,6 +50,7 @@ flutter:
   assets:
     - assets/icons/
     - assets/images/
+    - android/app/src/main/res/drawable-v21/
 
   # fonts:
   #   - family: Schyler
