--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_native_timezone: ^2.0.0
   overlay_support: ^1.2.1
   provider: ^6.0.2
+  admob_flutter: ^2.0.0
 
 dev_dependencies:
   flutter_test:
