--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   overlay_support: ^1.2.1
   provider: ^6.0.2
   admob_flutter: ^2.0.0
+  currency_picker: ^2.0.9
 
 dev_dependencies:
   flutter_test:
