--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.4+4
+version: 1.0.6+6
 
 environment:
   sdk: ">=2.16.1 <3.0.0"
@@ -36,6 +36,8 @@ dependencies:
   provider: ^6.0.2
   admob_flutter: ^2.0.0
   currency_picker: ^2.0.9
+  pay: ^1.0.8
+  just_audio: ^0.9.21
 
 dev_dependencies:
   flutter_test:
@@ -50,6 +52,7 @@ flutter:
   uses-material-design: true
 
   assets:
+    - assets/
     - assets/icons/
     - assets/images/
     - android/app/src/main/res/drawable-v21/
