--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.7+9
+version: 1.0.7+10
 
 environment:
   sdk: ">=2.16.1 <3.0.0"
@@ -37,7 +37,8 @@ dependencies:
   admob_flutter: ^2.0.0
   currency_picker: ^2.0.9
   pay: ^1.0.8
-  just_audio: ^0.9.21
+  flutter_staggered_animations: "^1.0.0"
+  animations: ^2.0.2
 
 
 dev_dependencies:
