--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
-  intl: ^0.17.0
+  intl: ^0.18.0
   flutter_local_notifications: ^9.4.1
   flutter_email_sender: ^5.1.0
   flutter_lints: ^1.0.0
@@ -22,9 +22,9 @@ dependencies:
   pdf: ^3.7.4
   printing: ^5.8.0
   path_provider: ^2.0.9
-  permission_handler: ^9.2.0
+  permission_handler: ^11.0.1
   flutter_native_splash: ^2.1.6
-  package_info_plus: ^1.4.2
+  # package_info_plus: ^4.2.0
   localstore: ^1.2.3
   flutter_screenutil: ^5.4.0+1
   url_launcher: ^6.1.0
@@ -32,9 +32,9 @@ dependencies:
   shared_preferences: ^2.0.13
   rxdart: ^0.27.3
   flutter_native_timezone: ^2.0.0
-  overlay_support: ^1.2.1
+  overlay_support: ^2.1.0
   provider: ^6.0.2
-  admob_flutter: ^2.0.0
+  admob_flutter: ^3.0.0
   currency_picker: ^2.0.9
   pay: ^1.0.8
   flutter_staggered_animations: "^1.0.0"
