--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,11 +14,11 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
-  intl: ^0.18.0
-  flutter_local_notifications: ^9.4.1
-  flutter_email_sender: ^5.1.0
-  flutter_lints: ^1.0.0
-  percent_indicator: ^3.4.0
+  intl: ^0.19.0
+  flutter_local_notifications: ^17.2.2
+  flutter_email_sender: ^6.0.3
+  flutter_lints: ^4.0.0
+  percent_indicator: ^4.2.3
   pdf: ^3.7.4
   printing: ^5.8.0
   path_provider: ^2.0.9
@@ -28,15 +28,15 @@ dependencies:
   localstore: ^1.2.3
   flutter_screenutil: ^5.4.0+1
   url_launcher: ^6.1.0
-  carousel_slider: ^4.1.1
+  carousel_slider: ^5.0.0
   shared_preferences: ^2.0.13
-  rxdart: ^0.27.3
-  flutter_native_timezone: ^2.0.0
+  rxdart: ^0.28.0
+  # flutter_native_timezone: ^2.0.0
   overlay_support: ^2.1.0
   provider: ^6.0.2
   admob_flutter: ^3.0.0
   currency_picker: ^2.0.9
-  pay: ^1.0.8
+  pay: ^2.0.0
   flutter_staggered_animations: "^1.0.0"
   animations: ^2.0.2
 
