--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
-  intl: ^0.19.0
+  intl: ^0.20.2
   flutter_local_notifications: ^17.2.2
   flutter_email_sender: ^6.0.3
   flutter_lints: ^4.0.0
@@ -44,7 +44,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  change_app_package_name: ^1.4.0
 
 
 
