--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   # flutter_native_timezone: ^2.0.0
   overlay_support: ^2.1.0
   provider: ^6.0.2
-  admob_flutter: ^3.0.0
+  google_mobile_ads: ^6.0.0
   currency_picker: ^2.0.9
   pay: ^2.0.0
   flutter_staggered_animations: "^1.0.0"
