--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,13 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   change_app_package_name: ^1.4.0
+  flutter_launcher_icons: "^0.14.4"
 
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icons/icon.png"
+  min_sdk_android: 21 
 
 
 
