--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,10 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
+  go_router: ^14.2.0
+  get_it: ^7.7.0
+  flutter_bloc: ^8.1.6
+
   intl: ^0.20.2
   flutter_local_notifications: ^19.4.2
   flutter_email_sender: ^8.0.0
