--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,8 +56,13 @@ flutter_launcher_icons:
   ios: true
   image_path: "assets/icons/icon.png"
   min_sdk_android: 21 
+  adaptive_icon_background: "#48BF84" 
+  adaptive_icon_foreground: "assets/icons/logo-transparent-bg.png"
+  adaptive_icon_monochrome: "assets/icons/logo-transparent-bg.png"
 
-
+flutter_native_splash:
+  background_image: assets/images/splash.png
+  image: assets/images/splash_center.png
 
 flutter:
 
