--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,8 +62,8 @@ flutter_launcher_icons:
   adaptive_icon_monochrome: "assets/icons/icon-monochrome.png"
 
 flutter_native_splash:
-  background_image: assets/images/splash.png
-  image: assets/images/splash_center.png
+  color: "#48BF84"
+  image: assets/icons/icon-monochrome.png
 
 flutter:
 
