--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_staggered_animations: "^1.0.0"
   animations: ^2.0.2
   introduction_screen: ^4.0.0
+  equatable: ^2.0.7
 
 
 dev_dependencies:
