--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.1.1+15
+version: 1.1.1+16
 
 environment:
   sdk: ^3.7.2
@@ -12,40 +12,35 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+    # generate: true
 
   cupertino_icons: ^1.0.2
   go_router: ^14.2.0
   get_it: ^7.7.0
   flutter_bloc: ^8.1.6
-
-  intl: ^0.20.2
   flutter_local_notifications: ^19.4.2
-  flutter_email_sender: ^8.0.0
   flutter_lints: ^6.0.0
-  percent_indicator: ^4.2.3
   pdf: ^3.7.4
   printing: ^5.8.0
   path_provider: ^2.0.9
   permission_handler: ^12.0.1
-  flutter_native_splash: ^2.1.6
   package_info_plus: ^8.3.0
   localstore: ^1.2.3
   flutter_screenutil: ^5.4.0+1
   url_launcher: ^6.1.0
-  carousel_slider: ^5.0.0
   shared_preferences: ^2.0.13
-  rxdart: ^0.28.0
   flutter_timezone: ^4.1.1
   overlay_support: ^2.1.0
   provider: ^6.0.2
   google_mobile_ads: ^6.0.0
   currency_picker: ^2.0.9
-  pay: ^3.2.1
-  flutter_staggered_animations: "^1.0.0"
-  animations: ^2.0.2
   introduction_screen: ^4.0.0
   equatable: ^2.0.7
   event_bus: ^2.0.1
+
+  flutter_localization: ^0.3.3
+
+
 
 
 dev_dependencies:
