--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-    # generate: true
+  flutter_localizations: 
+    sdk: flutter
+  intl: any
 
   cupertino_icons: ^1.0.2
   go_router: ^14.2.0
@@ -26,7 +28,6 @@ dependencies:
   permission_handler: ^12.0.1
   package_info_plus: ^8.3.0
   localstore: ^1.2.3
-  flutter_screenutil: ^5.4.0+1
   url_launcher: ^6.1.0
   shared_preferences: ^2.0.13
   flutter_timezone: ^4.1.1
@@ -37,8 +38,6 @@ dependencies:
   introduction_screen: ^4.0.0
   equatable: ^2.0.7
   event_bus: ^2.0.1
-
-  flutter_localization: ^0.3.3
 
 
 
@@ -65,6 +64,7 @@ flutter_native_splash:
 flutter:
 
   uses-material-design: true
+  generate: true
 
   assets:
     - assets/
@@ -72,18 +72,4 @@ flutter:
     - assets/images/
     - android/app/src/main/res/drawable-v21/
 
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
 
